# nssf

./: .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  setup.sh
context/3gpp/: TS29531_Nnssf_NSSelection.yaml
nssf/: .gitignore  README.md  package-lock.json
nssf/src/: index.ts
src/: config.rs  db.rs  errors.rs  index.ts  main.rs  validation.rs
src/clients/: mod.rs  nrf.rs
src/db/: mongodb.ts
src/handlers/: amf_configuration.rs  configuration.rs  health.rs  mod.rs  nsag_configuration.rs  nsi_configuration.rs  nssaiavailability.rs  nsselection.rs  nssrg_configuration.rs  policy_configuration.rs  snssai_mapping_configuration.rs  subscription_configuration.rs
src/routers/: configuration.ts  nnssf-nssaiavailability.ts  nnssf-nsselection.ts
src/routes/: mod.rs
src/services/: allowed-nssai.ts  allowed_nssai.rs  amf-configuration.ts  amf-selection.ts  amf_selection.rs  feature-negotiation.test.ts  feature-negotiation.ts  feature_negotiation.rs  mod.rs  network-slice-selection.ts  network_slice_selection.rs  nrf-amf-discovery.ts  nrf-client.ts  nsag-admission-control.ts  nsag-configuration.ts  nsag_admission.rs  nsi-configuration.ts  nssai-availability.ts  nssai_availability.rs  nssrg-configuration.ts  nssrg-processing.ts  nssrg_processing.rs  policy-configuration.ts  requested-nssai-validation.test.ts  requested-nssai-validation.ts  slice-configuration.ts  snssai-mapping.ts  snssai_mapping.rs  subscription.rs  subscription.ts
src/types/: amf-selection-types.ts  app_state.rs  common-types.ts  common.rs  db-types.ts  db.rs  mod.rs  (+8 more)
(+9 files in other folders)
